# asterism

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_EN.md  README_ZH.md  plan.txt
.github/workflows/: ci.yml
install/: asterism.service  com.asterism.plist  install_service.sh  install_service_macos.sh  install_task_windows.ps1  service.ps1  service.sh  uninstall_service.sh  uninstall_service_macos.sh  uninstall_task_windows.ps1
local/: app.js  config.json
src/asterism/: CMakeLists.txt  asterism.c  asterism.h  asterism.rc.in  asterism_connector_tcp.c  asterism_connector_tcp.h  asterism_core.c  asterism_core.h  asterism_datagram.c  asterism_datagram.h  asterism_inner_http.c  asterism_inner_http.h  asterism_inner_socks5.c  asterism_inner_socks5.h  asterism_inner_socks5_udp.c  asterism_inner_socks5_udp.h  asterism_internal.h  asterism_log.c  asterism_log.h  asterism_outer_tcp.c  asterism_outer_tcp.h  asterism_portal.c  asterism_portal.h  asterism_requestor_tcp.c  asterism_requestor_tcp.h  asterism_requestor_udp.c  asterism_requestor_udp.h  asterism_responser_tcp.c  asterism_responser_tcp.h  asterism_slist.c  asterism_stream.c  asterism_stream.h  asterism_trans.c  asterism_trans.h  asterism_utils.c  asterism_utils.h  asterism_version.h.in  main.c  parg.c  parg.h  (+2 more)
src/asterism/test/: asterism_test01.c  asterism_test01.h  asterism_test02.c  asterism_test02.h  asterism_test03.c  asterism_test03.h  unit_test.c  unit_test.h
test/: CMakeLists.txt  main.c  smoke_test.py  suite_core.c  suite_datagram.c  suite_hooks.c  suite_options.c  suite_portal.c  suite_proxy.c  suite_timeouts.c  suite_udp.c  suite_utils.c  suite_wire.c  test_framework.c  test_framework.h  test_utils.c  test_utils.h
